kubefiles/ngappingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ngapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ngappingress.loc
    http:
      paths:
        - path: /
          backend:
            serviceName: ngapp-service
            servicePort: 80
