kubefiles/tv8appingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tv8app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tv8appingress.loc
    http:
      paths:
        - path: /
          backend:
            serviceName: tv8app-service
            servicePort: 8080
